--- a/home/jinja2/base.html
+++ b/home/jinja2/base.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href='{{ static("css/custom.css") }}' rel="stylesheet" />
-    <title>Journée portes ouvertes du lycée Aristide Briand</title>
-    <meta name="description" content="Inscription aux journées portes ouvertes du lycée Aristide Briand" />
+    <title>Inscription à la certification Pix du lycée Aristide Briand</title>
+    <meta name="description" content="Inscription à la certification Pix du lycée Aristide Briand" />
     <meta name="Language" CONTENT="fr" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
