--- a/home/jinja2/home.html
+++ b/home/jinja2/home.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block navbar %}
-<li class="nav-item">
+<!---  <li class="nav-item">
   <a class="nav-link active" href="/">Accueil</a>
-</li>
+</li> --->
 <li class="nav-item">
   <a class="nav-link" href="/planning/">Planning</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="/inscription/">Inscription</a>
+  <a class="nav-link" href="/">Inscription</a>
 </li>
 {% endblock %}
 
