--- a/schedule_booking/jinja2/booking_saved.html
+++ b/schedule_booking/jinja2/booking_saved.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block navbar %}
-<li class="nav-item">
+<!--- <li class="nav-item">
   <a class="nav-link" href="/">Accueil</a>
-</li>
+</li> --->
 <li class="nav-item">
   <a class="nav-link" href="/planning/">Planning</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="/inscription/">Inscription</a>
+  <a class="nav-link" href="/">Inscription</a>
 </li>
 {% endblock %}
 
@@ -16,14 +16,13 @@
 <br>
 <p>Votre inscription a bien été enregistrée.</p>
 <p>Vous êtes attendu(e)s :
-<ul>
-  {% for a in apps %}
-  <li>
-    le {{ a.schedule__datetime.strftime("%A %d/%m") }} à {{ a.schedule__datetime.strftime("%H:%M") }} pour visiter l'emplacement {{ a.place__name }}
-  </li>
-  {% endfor %}
-</ul>
+  <ul>
+    {% for a in apps %}
+    <li>
+      le {{ a.schedule__datetime.strftime("%A %d/%m") }} à {{ a.schedule__datetime.strftime("%H:%M") }} pour passer la certification Pix.
+    </li>
+    {% endfor %}
+  </ul>
 </p>
-<p>Le port du masque est obligatoire sur toute la cité scolaire. L'élève doit être accompagné par un seul adulte référent.</p>
-<p>Vous devriez recevoir un email de confirmation à l'adresse {{ email }}. Il faudra présenter cet email à l'entrée de la cité scolaire pour y entrer le jour des portes ouvertes. Dans le cas où vous ne le trouvez pas dans votre boite de réception, ne vous inquiétez pas. Venez tout de même au lycée pour les portes ouvertes. Nous pourrons vous retrouver sur une liste.</p>
+<p>Vous devriez recevoir un email de confirmation à l'adresse {{ email }}.</p>
 {% endblock %}
