--- a/schedule_booking/jinja2/scheduling_page_view.html
+++ b/schedule_booking/jinja2/scheduling_page_view.html
@@ -2,19 +2,19 @@
 
 {% block navbar %}
 <li class="nav-item">
-  <a class="nav-link" href="/">Accueil</a>
+  <a class="nav-link" href="/">Inscription</a>
 </li>
 <li class="nav-item">
   <a class="nav-link active" href="/planning/">Planning</a>
 </li>
-<li class="nav-item">
+<!--- <li class="nav-item">
   <a class="nav-link" href="/inscription/">Inscription</a>
-</li>
+</li>--->
 {% endblock %}
 
 {% block content %}
 <p>Le planning ci-dessous vous indique pour chaque filière ou formation l'affluence dans chaque créneau horaire.
-  {% if config.show_people %} Dans chaque case, la première valeur indique le nombre de {% if not config.max_escort %}familles (un élève et un adulte référent){% else %}personnes{% endif %}{% endif %} déjà inscrites. La deuxième valeur indique la jauge maximale.
+  {% if config.show_people %} Dans chaque case, la première valeur indique le nombre de personnes déjà inscrites. La deuxième valeur indique la jauge maximale. {% endif %}
   Si la case est verte, il reste encore des places. Si la case est grise, le créneau est complet.</p>
 {% include "scheduling_view.html" %}
 {% endblock %}
