--- a/schedule_booking/jinja2/scheduling_page_booking.html
+++ b/schedule_booking/jinja2/scheduling_page_booking.html
@@ -20,7 +20,7 @@
 {% endif %}
 {% if config.rgpd %}
 <div class="alert alert-warning" role="alert">
-  Les données récoltées sont utilisées uniquement dans le cadre des portes ouvertes du lycée Aristide Briand (association des personnes aux créneaux horaires, rappel par email de l'inscription et des éventuelles modifications liées aux portes ouvertes). Elles seront toutes effacées après cet évènement. 
+  Les données récoltées sont utilisées uniquement dans le cadre de l'inscription à la certification Pix du lycée Aristide Briand (association aux créneaux horaires, rappel par email de l'inscription et des éventuelles modifications liées à cette certification). 
 </div>
 {% endif %}
 <form method="POST" id="form">
@@ -58,7 +58,7 @@
     <div id="validationescort" class="invalid-feedback">{% if errors is defined and errors.message_dict["escort"] is defined %} {{ errors.message_dict["escort"][0] }} {% endif %}</div>
   </div>
   {% endif %}
-  <p>Le planning ci-dessous vous permet, pour chaque filière ou formation, de choisir le créneau horaire le plus favorable en fontion de vos disponibilités.{% if config.show_people %} Dans chaque case, la première valeur indique le nombre de personnes déjà inscrites. La deuxième valeur indique la jauge maximale.{% endif %}
+  <p>Le planning ci-dessous vous permet de choisir le créneau horaire le plus favorable en fontion de vos disponibilités.{% if config.show_people %} Dans chaque case, la première valeur indique le nombre de personnes déjà inscrites. La deuxième valeur indique la jauge maximale.{% endif %}
     Si la case est verte, il reste encore des places. Si la case est grise, le créneau est complet.</p>
   {% include "scheduling_booking.html" %}
   {% if config.recaptcha %}
