--- a/schedule_booking/jinja2/scheduling_page_view.html
+++ b/schedule_booking/jinja2/scheduling_page_view.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<p>Le planning ci-dessous vous indique pour chaque filière ou formation l'affluence dans chaque créneau horaire.
+<p>Le planning ci-dessous vous indique l'affluence dans chaque créneau horaire.
   {% if config.show_people %} Dans chaque case, la première valeur indique le nombre de personnes déjà inscrites. La deuxième valeur indique la jauge maximale. {% endif %}
   Si la case est verte, il reste encore des places. Si la case est grise, le créneau est complet.</p>
 {% include "scheduling_view.html" %}
