--- a/schedule_booking/jinja2/booking_saved.html
+++ b/schedule_booking/jinja2/booking_saved.html
@@ -16,5 +16,5 @@
 <br>
 <p>Votre inscription a bien été enregistrée.</p>
 <p>Vous êtes attendu(e)s le {{ apps[0].place__name }} pour passer la certification Pix.</p>
-<p>Vous devriez recevoir un email de confirmation à l'adresse {{ email }}.</p>
+<p>Vous devriez recevoir un email de confirmation à l'adresse {{ email }}. Si ce n'est pas le cas, écrivez à l'adresse pix@abriand.info pour vous assurer que vous êtes bien inscrit.</p>
 {% endblock %}
